--- a/pokemon_table.html
+++ b/pokemon_table.html
@@ -4,6 +4,7 @@
 	<title>Pokemon Chart</title>
 </head>
 <body>
+	<h1><strong>First Gen Pokemon Chart</strong></h1>
 	<table border="1">
 		<thead>
 			<tr>
